[project]
name = "catalog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "NiharikaRaoD", email = "niharika.dharmana@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
]

[project.scripts]
catalog = "catalog:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
