[project]
name = "users"
version = "1.0.0"
description = " SQLAlchemy Tutorial"
readme = "README.md"
authors = [
    { name = "NiharikaRaoD", email = "niharika.dharmana@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.44",
]

[project.scripts]
users = "users:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
